--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native": "0.69.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.6.0",
-    "react-native-paper": "^4.12.4",
+    "react-native-paper": "5.0.0-rc.5",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-web": "~0.18.7",
